fix ref to img directory

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,19 +16,19 @@ layout: default
   <!-- Three columns -->
   <div class="row">
     <div class="col-lg-4">
-      <a href="/visual-art/"><img class="img-thumbnail" src="{{ site.url }}{{ baseurl }}/img/pennisular-bighorn-th.jpg" width="250" alt=""></a>
+      <a href="/visual-art/"><img class="img-thumbnail" src="{{ site.url }}{{ site.baseurl }}/img/pennisular-bighorn-th.jpg" width="250" alt=""></a>
       <h2>Visual Art</h2>
       <p>Design, Illustration, Ink, Murals and Paintings</p>
       <p><a class="btn btn-default" href="/visual-art/" role="button">View Art &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
-      <a href="/projects/"><img class="img-thumbnail" src="{{ site.url }}{{ baseurl }}/terri-pinwheel-design-th.jpg" width="250" alt=""></a>
+      <a href="/projects/"><img class="img-thumbnail" src="{{ site.url }}{{ site.baseurl }}/img/terri-pinwheel-design-th.jpg" width="250" alt=""></a>
       <h2>Projects</h2>
       <p>Custom Themes and Art Installations</p>
       <p><a class="btn btn-default" href="/projects/" role="button">View Projects &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
-      <a href="/custom-signs/"><img class="img-thumbnail" src="{{ site.url }}{{ baseurl }}/hotel-sign-th.jpg" width="250" alt=""></a>
+      <a href="/custom-signs/"><img class="img-thumbnail" src="{{ site.url }}{{ site.baseurl }}/img/hotel-sign-th.jpg" width="250" alt=""></a>
       <h2>Custom Signs</h2>
       <p>Hand-Crafted Signs</p>
       <p><a class="btn btn-default" href="/custom-signs/" role="button">View Signs &raquo;</a></p>
@@ -44,7 +44,7 @@ layout: default
       <p class="lead">This &quot;Ode to Arches National Park mural&quot; was created for the Canyonlands RV Resort, located in the town of Moab at the heart of Utah&#39;s amazing red rock country. The mural is a tribute to many of the scenic wonders that are in the park.</p>
     </div>
     <div class="col-md-5">
-      <a href="/visual-art/murals/ode-to-arches-national-park-moab-utah/"><img class="featurette-image img-responsive" src="{{ site.url }}{{ baseurl }}/recent-project-th.jpg" width="500" alt="Ode to Arches National Park Mural" title="Ode to Arches National Park Mural"></a>
+      <a href="/visual-art/murals/ode-to-arches-national-park-moab-utah/"><img class="featurette-image img-responsive" src="{{ site.url }}{{ site.baseurl }}/img/recent-project-th.jpg" width="500" alt="Ode to Arches National Park Mural" title="Ode to Arches National Park Mural"></a>
     </div>
   </div>
   <hr class="featurette-divider">
