fix ref to logo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <!--Welcome-->
 <div class="jumbotron">
 <div class="container">
-	<img src="{{ site.url }}{{ baseurl }}/sai-logo.png" width="100" alt="Sutfin Art Industries Logo">
+	<img src="{{ site.url }}{{ site.baseurl }}/img/sai-logo.png" width="100" alt="Sutfin Art Industries Logo">
 	<h1>Sutfin Art Industries, Inc.</h1>
 	<p>Greetings! and welcome to our website. We are a small business offering a variety of art and design related services. Much of our work includes collaborating with other professionals, artists and designers. Please check out our galleries to see the types of work we do, and contact us if you have any questions or would like more information.</p>
 </div>
