--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,9 +63,9 @@
 		</ul>
 	    </li>
 	{% elsif nav.external-subcategories != null %}
-	    <li class="dropdown">
-	      <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }}</a>
-		<ul class="dropdown-child">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ nav.title }}<span class="caret"></span></a>
+<ul class="dropdown-menu" role="menu">
+<li class="dropdown-header">{{ nav.title }}</li>
 		  {% for subcategory in nav.external-subcategories %}
 		    <li><a href="{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
 		  {% endfor %}
