--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,7 @@
 		</ul>
 	    </li>
 	{% elsif nav.external-subcategories != null %}
+  	    <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ nav.title }}<span class="caret"></span></a>
 <ul class="dropdown-menu" role="menu">
 <li class="dropdown-header">{{ nav.title }}</li>
@@ -63,6 +64,7 @@
 		</ul>
 	    </li>
 	{% elsif nav.external-subcategories != null %}
+  	    <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ nav.title }}<span class="caret"></span></a>
 <ul class="dropdown-menu" role="menu">
 <li class="dropdown-header">{{ nav.title }}</li>
