--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,11 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <link rel="shortcut icon" href="{{ "/img/favicon.ico" | relative_url }}">
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+  {% if site.env == "dev" %}
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  {% else %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  {% endif %}
   <!-- <link href="/css/bootstrap.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="{{ "/css/sai.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
