--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,14 @@ layout: compress
         {{ content }}
 
     {% include footer.html %}
+    {% if site.env == "dev" %}
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    {% else %}
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <!-- <script src="/js/jquery.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- <script src="/js/bootstrap.min.js"></script> -->
+    {% endif %}
     {% if page.layout == 'gallery' %}
     <!-- Gallery Scripts -->
 <script src="{{ "/js/blueimp-gallery.min.js" | relative_url }}"></script>
