--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 ---
+<img src="{{ "/img/logo-header-banner-large.png" | relative_url }}" width="100%" alt="Sutfin Art Industries Logo">
 <div class="container">
 	<div class="jumbotron">
 		<h1>{{ page.title }}</h1>
