--- a/css/sai.css
+++ b/css/sai.css
@@ -5,6 +5,7 @@ body {
   padding-bottom: 40px;
   color: #999;
   background-color: #222;
+  font-family: 'Cabin Condensed', sans-serif;
 }
 .navbar-default .navbar-brand,
 .navbar-default .navbar-brand:hover{
@@ -18,9 +19,11 @@ h1,
 .media-body h4 {
 	color:#fff;
 	margin-bottom: 10px;
+  font-weight: 700;
 }
 h2 {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
+	font-weight: 700;
 }
 .media {
 	background-color: #111;
