--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   {% else %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   {% endif %}
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed:400,500,600,700" rel="stylesheet">
   <!-- <link href="/css/bootstrap.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="{{ "/css/sai.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
