--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,9 +5,8 @@ layout: default
 <!--Welcome-->
 <div class="jumbotron">
 <div class="container">
-	<img src="{{ "/img/sai-logo.png" | relative_url }}" width="100" alt="Sutfin Art Industries Logo">
-	<h1>Sutfin Art Industries, Inc.</h1>
-	<p>Greetings! and welcome to our website. We are a small business offering a variety of art and design related services. Much of our work includes collaborating with other professionals, artists and designers. Please check out our galleries to see the types of work we do, and contact us if you have any questions or would like more information.</p>
+	<img src="{{ "/img/logo-header-banner-large.png" | relative_url }}" width="100%" alt="Sutfin Art Industries Logo">
+	<p>Welcome. We specialize in the design, production and installation of visual art for any project. Please have a look at our website to see the types of work we do and contact us if you have any questions or would like more information. Thank you.</p>
 </div>
 </div>
 <!-- Website categories and featurettes
@@ -35,14 +34,29 @@ layout: default
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
   <!-- START THE FEATURETTES -->
+	<h2 class="featurette-heading">Recent Projects</h2>
   <hr class="featurette-divider">
   <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading">Recent Project</h2>
-      <h3><span class="text-muted">Moab, Utah</span></h3>
-			<!-- Recent Project Description goes below -->
-      <p class="lead">This &quot;Ode to Arches National Park mural&quot; was created for the Canyonlands RV Resort, located in the town of Moab at the heart of Utah&#39;s amazing red rock country. The mural is a tribute to many of the scenic wonders that are in the park.</p>
+		<div class="col-md-7">
+			<iframe src="https://player.vimeo.com/video/226059872" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
+    <div class="col-md-5">
+      <h2 class="featurette-heading">"What a Wonderful World" -mural</h2>
+      <h3><span class="text-muted">Timelapse Video</span></h3>
+                        <!-- Recent Project Description goes below -->
+      <p class="lead">Created for the Sideways Inn located in Buellton, California. The mural celebrates the music of Louis Armstrong and his song titled &quot;What a Wonderful World.&quot; Check out the timelapse video of its creation.</p>
+    </div>
+  </div>
+	<hr class="featurette-divider">
+  <div class="row featurette">
+    <div class="col-md-6">
+			<h2 class="featurette-heading">"Ode to Arches" -mural</h2>
+      <h3><span class="text-muted">Image Gallery</span></h3>
+			<!-- Recent Project Description goes below -->
+      <p class="lead">Created for Canyonlands RV Resort located in Moab, Utah. The mural is a tribute to many of the scenic wonders that are in Arches National Park.</p>
+    </div>
+		<div class="col-md-1">
+		</div>
     <div class="col-md-5">
       <a href="{{ "/visual-art/murals/ode-to-arches-national-park-moab-utah/" | relative_url }}"><img class="featurette-image img-responsive" src="{{ "/img/recent-project-th.jpg" | relative_url }}" width="500" alt="Ode to Arches National Park Mural" title="Ode to Arches National Park Mural"></a>
     </div>
