--- a/css/sai-image-gallery.css
+++ b/css/sai-image-gallery.css
@@ -1,9 +1,6 @@
-.links {
-	margin:25px 0;
-}
 .links a img {
-	margin:3px;
-	max-height: 100px;
+	margin:0 15px 15px 0;
+	max-height: 200px;
 	max-width: 100%;
 }
 h2 {
@@ -14,4 +11,5 @@ p {
 	color: #bbb;
 	font-size: medium;
 	max-width: 460px;
+	margin-bottom: 15px;
 }
