--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 <div class="jumbotron">
 <div class="container">
 	<img src="{{ "/img/logo-header-banner-large.png" | relative_url }}" width="100%" alt="Sutfin Art Industries Logo">
-	<p>Welcome. We specialize in the design, production and installation of visual art for any project. Please have a look at our website to see the types of work we do and contact us if you have any questions or would like more information. Thank you.</p>
+	<p>Welcome. We specialize in the design, production and installation of visual art. Please have a look at our galleries to see the types of work we do and contact us if you have any questions or would like more information. Thank you.</p>
 </div>
 </div>
 <!-- Website categories and featurettes
@@ -15,19 +15,19 @@ layout: default
   <!-- Three columns -->
   <div class="row">
     <div class="col-lg-4">
-      <a href="{{ "/visual-art/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/pennisular-bighorn-th.jpg" | relative_url }}" width="250" alt=""></a>
+      <a href="{{ "/visual-art/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/terri-painting-flower.jpg" | relative_url }}" width="250" alt=""></a>
       <h2>Visual Art</h2>
       <p>Design, Illustration, Ink, Murals and Paintings</p>
       <p><a class="btn btn-default" href="{{ "/visual-art/" | relative_url }}" role="button">View Art &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
-      <a href="{{ "/projects/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/terri-pinwheel-design-th.jpg" | relative_url }}" width="250" alt=""></a>
+      <a href="{{ "/projects/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/reese-and-terri-on-ladder.jpg" | relative_url }}" width="250" alt=""></a>
       <h2>Projects</h2>
       <p>Custom Themes and Art Installations</p>
       <p><a class="btn btn-default" href="{{ "/projects/" | relative_url }}" role="button">View Projects &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
-      <a href="{{ "/custom-signs/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/hotel-sign-th.jpg" | relative_url }}" width="250" alt=""></a>
+      <a href="{{ "/custom-signs/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/cut-out-goat.jpg" | relative_url }}" width="250" alt=""></a>
       <h2>Custom Signs</h2>
       <p>Hand-Crafted Signs</p>
       <p><a class="btn btn-default" href="{{ "/custom-signs/" | relative_url }}" role="button">View Signs &raquo;</a></p>
