--- a/css/sai-home.css
+++ b/css/sai-home.css
@@ -39,6 +39,7 @@
 .marketing .col-lg-4 p {
   margin-right: 10px;
   margin-left: 10px;
+  font-size: 18px !important;
 }
 .img-thumbnail {
 	width:300px;
@@ -57,9 +58,12 @@
   font-size: 50px;
   color: #fff;
 }
-@media (min-width: 992px) {
-  .featurette-heading {
-  }
+@media (min-width: 700px) {
+	.jumbotron p {
+		margin: 0;
+		width:88%;
+		float:right;
+	}
 }
 .featurette {
 	margin-bottom: 20px;
