disallow archives in non archive menu

--- a/_layouts/menu.html
+++ b/_layouts/menu.html
@@ -10,7 +10,7 @@ layout: page
 		{% capture num_parts %}{{ url_parts | number_of_words }}{% endcapture %}
 		{% capture p_url_parts %} {{ p.url | remove: "/index.html" | replace:'/'," " }}{% endcapture %}
 		{% capture p_num_parts %}{{ p_url_parts | number_of_words | minus: 1 }}{% endcapture %}
-		{% if p.title != page.title and p.permalink contains page.permalink and num_parts == p_num_parts %}
+		{% if p.title != page.title and p.permalink contains page.permalink and p.permalink !contains archive and num_parts == p_num_parts %}
 		<li class="media">
 			<a class="pull-left" href="{{ p.url | relative_url }}">
 				<img class="media-object" src="{{ site.url }}{{ site.baseurl }}{{ site.galimgdir }}{{ p.permalink }}{{ p.thumbnail }}">
