--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,33 +34,49 @@ layout: default
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
   <!-- START THE FEATURETTES -->
-	<h2 class="featurette-heading">Recent Projects</h2>
+	<h1 class="featurette-heading">Recent Projects</h1>
+  <hr class="featurette-divider">
+	<a href="{{ "/projects/grand-lake-lodge-rocky-mtn-national-park-co/" | relative_url }}">
+	<div class="row featurette">
+    <div class="col-md-7">
+				<h2 class="featurette-heading">Grand Lake Lodge -project</h2>
+				<p class="lead">Rock Mnt. National Park, CO</p>
+      	<h3><span class="text-muted">Image Gallery</span></h3>
+			<!-- Recent Project Description goes below -->
+			<p class="lead"></p>
+    </div>
+    <div class="col-md-5">
+      	<img class="featurette-image img-responsive" src="{{ "/images/projects/grand-lake-lodge-rocky-mtn-national-park-co/4.grand-lake-lodge-painting-osprey-mural.jpg" | relative_url }}" width="500" alt="Grand Lake Lodge painting Osprey mural" title="Grand Lake Lodge painting Osprey mural">
+    </div>
+  </div></a>
   <hr class="featurette-divider">
   <div class="row featurette">
-		<div class="col-md-7">
-			<iframe src="https://player.vimeo.com/video/226059872" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
+
     <div class="col-md-5">
       <h2 class="featurette-heading">"What a Wonderful World" -mural</h2>
       <h3><span class="text-muted">Timelapse Video</span></h3>
                         <!-- Recent Project Description goes below -->
       <p class="lead">Created for the Sideways Inn located in Buellton, California. The mural celebrates the music of Louis Armstrong and his song titled &quot;What a Wonderful World.&quot; Check out the timelapse video of its creation.</p>
     </div>
+		<div class="col-md-7">
+			<iframe src="https://player.vimeo.com/video/226059872" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		</div>
   </div>
 	<hr class="featurette-divider">
+		<a href="{{ "/visual-art/murals/ode-to-arches-national-park-moab-utah/" | relative_url }}">
   <div class="row featurette">
     <div class="col-md-6">
 			<h2 class="featurette-heading">"Ode to Arches" -mural</h2>
-      <h3><span class="text-muted">Image Gallery</span></h3>
+			<h3><span class="text-muted">Image Gallery</span></h3>
 			<!-- Recent Project Description goes below -->
       <p class="lead">Created for Canyonlands RV Resort located in Moab, Utah. The mural is a tribute to many of the scenic wonders that are in Arches National Park.</p>
     </div>
 		<div class="col-md-1">
 		</div>
     <div class="col-md-5">
-      <a href="{{ "/visual-art/murals/ode-to-arches-national-park-moab-utah/" | relative_url }}"><img class="featurette-image img-responsive" src="{{ "/img/recent-project-th.jpg" | relative_url }}" width="500" alt="Ode to Arches National Park Mural" title="Ode to Arches National Park Mural"></a>
+				<img class="featurette-image img-responsive" src="{{ "/img/recent-project-th.jpg" | relative_url }}" width="500" alt="Ode to Arches National Park Mural" title="Ode to Arches National Park Mural">
     </div>
-  </div>
+  </div></a>
   <hr class="featurette-divider">
   <!-- /END THE FEATURETTES -->
 </div><!-- /.container -->
