--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ layout: default
 	<div class="row featurette">
     <div class="col-md-7">
 				<h2 class="featurette-heading">Grand Lake Lodge -project</h2>
-				<p class="lead">Rock Mnt. National Park, CO</p>
+				<p class="lead">Rock Mtn. National Park, CO</p>
       	<h3><span class="text-muted">Image Gallery</span></h3>
 			<!-- Recent Project Description goes below -->
 			<p class="lead"></p>
@@ -51,14 +51,13 @@ layout: default
   </div></a>
   <hr class="featurette-divider">
   <div class="row featurette">
-
-    <div class="col-md-5">
-      <h2 class="featurette-heading">"What a Wonderful World" -mural</h2>
-      <h3><span class="text-muted">Timelapse Video</span></h3>
-                        <!-- Recent Project Description goes below -->
-      <p class="lead">Created for the Sideways Inn located in Buellton, California. The mural celebrates the music of Louis Armstrong and his song titled &quot;What a Wonderful World.&quot; Check out the timelapse video of its creation.</p>
-    </div>
-		<div class="col-md-7">
+		<div class="col-md-5 col-md-push-7">
+			<h2 class="featurette-heading">"What a Wonderful World" -mural</h2>
+			<h3><span class="text-muted">Timelapse Video</span></h3>
+												<!-- Recent Project Description goes below -->
+			<p class="lead">Created for the Sideways Inn located in Buellton, California. The mural celebrates the music of Louis Armstrong and his song titled &quot;What a Wonderful World.&quot; Check out the timelapse video of its creation.</p>
+		</div>
+		<div class="col-md-7 col-md-pull-5">
 			<iframe src="https://player.vimeo.com/video/226059872" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div>
   </div>
