display location data

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -7,6 +7,7 @@ layout: page
 <link rel="stylesheet" href="{{ "/css/sai-image-gallery.css" | relative_url }}">
 <div class="container">
 			<h2>{{ page.title }}</h2>
+			<h4>{{ page.location }}<h4>
 		<p>{{ page.description }}</p>	<h4>Click on any image to launch gallery</h4>
 	<!-- The container for the list of gallery images -->
 	<div id="links" class="links">
