--- a/_layouts/menu.html
+++ b/_layouts/menu.html
@@ -18,7 +18,7 @@ layout: page
 			</a>
 			<div class="media-body">
 				<a href="{{ p.url | relative_url }}">
-					<h4 class="media-heading">{{ p.title }}</h4><p>{{p.description}}</p>
+					<h4 class="media-heading">{{ p.title }} - {{ p.location }}</h4><p>{{p.description}}</p>
 				</a>
 			</div>
 		</li>
