--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,19 +14,19 @@ layout: default
 <div class="container marketing">
   <!-- Three columns -->
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-sm-4 col-lg-4">
       <a href="{{ "/visual-art/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/terri-painting-flower.jpg" | relative_url }}" width="250" alt=""></a>
       <h2>Visual Art</h2>
       <p>Design, Illustration, Ink, Murals and Paintings</p>
       <p><a class="btn btn-default" href="{{ "/visual-art/" | relative_url }}" role="button">View Art &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
+    <div class="col-sm-4 col-lg-4">
       <a href="{{ "/projects/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/reese-and-terri-on-ladder.jpg" | relative_url }}" width="250" alt=""></a>
       <h2>Projects</h2>
       <p>Custom Themes and Art Installations</p>
       <p><a class="btn btn-default" href="{{ "/projects/" | relative_url }}" role="button">View Projects &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
-    <div class="col-lg-4">
+    <div class="col-sm-4 col-lg-4">
       <a href="{{ "/custom-signs/" | relative_url }}"><img class="img-thumbnail" src="{{ "/img/cut-out-goat.jpg" | relative_url }}" width="250" alt=""></a>
       <h2>Custom Signs</h2>
       <p>Hand-Crafted Signs</p>
@@ -38,41 +38,41 @@ layout: default
   <hr class="featurette-divider">
 	<a href="{{ "/projects/grand-lake-lodge-rocky-mtn-national-park-co/" | relative_url }}">
 	<div class="row featurette">
-    <div class="col-md-7">
+    <div class="col-sm-7">
 				<h2 class="featurette-heading">Grand Lake Lodge -project</h2>
 				<p class="lead">Rock Mtn. National Park, CO</p>
       	<h3><span class="text-muted">Image Gallery</span></h3>
 			<!-- Recent Project Description goes below -->
 			<p class="lead"></p>
     </div>
-    <div class="col-md-5">
+    <div class="col-sm-5">
       	<img class="featurette-image img-responsive" src="{{ "/images/projects/grand-lake-lodge-rocky-mtn-national-park-co/4.grand-lake-lodge-painting-osprey-mural.jpg" | relative_url }}" width="500" alt="Grand Lake Lodge painting Osprey mural" title="Grand Lake Lodge painting Osprey mural">
     </div>
   </div></a>
   <hr class="featurette-divider">
   <div class="row featurette">
-		<div class="col-md-5 col-md-push-7">
+		<div class="col-sm-5 col-sm-push-7">
 			<h2 class="featurette-heading">"What a Wonderful World" -mural</h2>
 			<h3><span class="text-muted">Timelapse Video</span></h3>
 												<!-- Recent Project Description goes below -->
 			<p class="lead">Created for the Sideways Inn located in Buellton, California. The mural celebrates the music of Louis Armstrong and his song titled &quot;What a Wonderful World.&quot; Check out the timelapse video of its creation.</p>
 		</div>
-		<div class="col-md-7 col-md-pull-5">
+		<div class="col-sm-7 col-sm-pull-5">
 			<iframe src="https://player.vimeo.com/video/226059872" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div>
   </div>
 	<hr class="featurette-divider">
 		<a href="{{ "/visual-art/murals/ode-to-arches-national-park-moab-utah/" | relative_url }}">
   <div class="row featurette">
-    <div class="col-md-6">
+    <div class="col-sm-6">
 			<h2 class="featurette-heading">"Ode to Arches" -mural</h2>
 			<h3><span class="text-muted">Image Gallery</span></h3>
 			<!-- Recent Project Description goes below -->
       <p class="lead">Created for Canyonlands RV Resort located in Moab, Utah. The mural is a tribute to many of the scenic wonders that are in Arches National Park.</p>
     </div>
-		<div class="col-md-1">
+		<div class="col-sm-1">
 		</div>
-    <div class="col-md-5">
+    <div class="col-sm-5">
 				<img class="featurette-image img-responsive" src="{{ "/img/recent-project-th.jpg" | relative_url }}" width="500" alt="Ode to Arches National Park Mural" title="Ode to Arches National Park Mural">
     </div>
   </div></a>
