--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <link rel="shortcut icon" href="{{ "/img/favicon.ico" | relative_url }}">
+  <link rel="shortcut icon" href="/favicon.ico">
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   {% if site.env == "dev" %}
   <link rel="stylesheet" href="/css/bootstrap.min.css">
