--- a/_layouts/menu-film-strip.html
+++ b/_layouts/menu-film-strip.html
@@ -5,17 +5,23 @@ layout: page
 div.film-strip {
   background-color: #111;
   margin-bottom: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 15px 0px;
 }
 div.film-strip p {
   text-align: center;
   margin: 0px;
+  padding: 0px;
   white-space: nowrap;
+}
+div.film-strip img {
+  height: 150px;
+  width: 150px;
 }
 </style>
 <div class="container">
 	<h1>{{ page.title }}</h1>
+</br>
+</div>
 {% for p in site.pages %}
 		{% capture url_parts %} {{ page.url | remove: "/index.html" | replace:'/'," " }}{% endcapture %}
 		{% capture num_parts %}{{ url_parts | number_of_words }}{% endcapture %}
@@ -23,7 +29,7 @@ div.film-strip p {
 		{% capture p_num_parts %}{{ p_url_parts | number_of_words | minus: 1 }}{% endcapture %}
 		{% if p.title != page.title and p.permalink contains page.permalink and num_parts == p_num_parts %}
 		{% unless p.archive %}
-			<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 film-strip">
+			<div class="col-md-2 col-sm-3 col-xs-6 film-strip">
 			<a href="{{ p.url | relative_url }}">
 				<img class="img-responsive center-block" src="{{ site.url }}{{ site.baseurl }}{{ site.galimgdir }}{{ p.permalink }}{{ p.thumbnail }}">
 				<p style="color:#fff;">'{{ p.title }}'</p>
@@ -34,5 +40,5 @@ div.film-strip p {
 		{% endunless %}
 		{% endif %}
 {% endfor %}
-
+<div class="container">
 </div>
