--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,14 @@
 ---
 layout: page
 ---
+<style>
+.jumbotron p {
+	color:#090909;
+}
+.jumbotron h1 {
+	color: #666;
+}
+</style>
 <img src="{{ "/img/logo-header-banner-large.png" | relative_url }}" width="100%" alt="Sutfin Art Industries Logo">
 <div class="container">
 	<div class="jumbotron">
