--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,7 +1,14 @@
 ---
 layout: page
 ---
-<link rel="stylesheet" href="{{ "/css/sai-contact.css" | relative_url }}">
+<style>
+.form-control-feedback {
+position:relative;
+display:inline;
+top:0;
+line-height:14px;
+}
+</style>
 <div class="container">
   <h1>Contact</h1>
   <div class="row">
