--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,10 +1,25 @@
 ---
 layout: page
 ---
-<!-- Gallery CSS -->
 <link rel="stylesheet" href="{{ "/css/blueimp-gallery.min.css" | relative_url }}">
 <link rel="stylesheet" href="{{ "/css/blueimp-gallery-indicator.css" | relative_url }}">
-<link rel="stylesheet" href="{{ "/css/sai-image-gallery.css" | relative_url }}">
+<style>
+h2 {
+	color:#fff;
+	margin:0 0 20px;
+}
+p {
+	color: #bbb;
+	font-size: medium;
+	max-width: 460px;
+	margin-bottom: 15px;
+}
+.links a img {
+	margin:0 15px 15px 0;
+	max-height: 200px;
+	max-width: 100%;
+}
+</style>
 <div class="container">
 			<h2>{{ page.title }}</h2>
 			<h4>{{ page.location }}<h4>
