add murals to mural-gallery

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -74,7 +74,9 @@ div.marketing {
   ol.breadcrumb li a {
     text-transform: capitalize;
   }
-
+footer p {
+  margin:0;
+}
   footer a {
     color: #fff;
     padding-left: 5px;
