--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -8,6 +8,9 @@ h2 {
 	color:#fff;
 	margin:20px 0 20px 15px;
 }
+h4 {
+	padding-left: 15px;
+}
 p {
 	color: #bbb;
 	font-size: medium;
@@ -24,7 +27,7 @@ p {
 }
 </style>
 			<h2>{{ page.title }}</h2>
-			<h4>{{ page.location }}<h4>
+			<h4>{{ page.location }}</h4>
 		<p>{{ page.description }}</p>
 	<!-- The container for the list of gallery images -->
 	<div id="links" class="links">
