--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -81,7 +81,7 @@ a .featurette:hover h3 span.text-muted {
 	<div class="container">
 	<h1 class="featurette-heading">Recent Projects</h1>
   <hr class="featurette-divider">
-	<a href="{{ "/img/grand-lake-lodge-painting-osprey-mural.jpg/" | relative_url }}">
+	<a href="{{ "/projects/grand-lake-lodge-rocky-mtn-national-park-co/" | relative_url }}">
 	<div class="row featurette">
     <div class="col-sm-6">
 				<h2 class="featurette-heading">Grand Lake Lodge -project</h2>
