--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,13 +29,12 @@
     margin-bottom: 0px;
   }
   h1 {
-  	color:#fff;
+  	color:#999;
   	margin-bottom: 20px;
     font-weight: 700;
     padding-left: 15px;
   }
   h2 {
-
   	font-weight: 700;
   }
   .breadcrumb {
@@ -65,7 +64,8 @@ div.marketing {
 }
   footer {
     clear:both;
-  	margin: 70px 15px 0px 15px;
+  	margin: 0;
+    padding: 50px 15px 0;
   }
   footer a:hover {
   	color:#940b10;
