--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,8 @@ layout: default
 	margin-bottom:0;
 }
 .jumbotron {
+	padding: 20px 0;
+	margin:0;
 	background-color: #222;
 }
 .jumbotron p {
@@ -16,12 +18,12 @@ layout: default
 	margin: 0 auto;
 	display: block;
 }
-.img-thumbnail {
-	background-color: #080808;
-	border: 1px solid #080808;
+div.marketing {
+	margin-bottom: 0px;
 }
 .marketing .col-lg-4 {
   text-align: center;
+	margin: 0 0 30px;
 }
 .marketing h2 {
   color: #fff;
@@ -37,6 +39,7 @@ layout: default
 }
 .featurette-heading {
   color: #fff;
+	margin: 0 0 20px;
 }
 a div.featurette p.lead {
 	color: #999;
