--- a/_layouts/menu-marketing.html
+++ b/_layouts/menu-marketing.html
@@ -4,17 +4,14 @@ layout: page
 <style>
 .col-lg-4 {
   text-align: center;
-	margin-bottom: 20px;
+  padding: 30px 0 20px;
+  background-color: #080808;
 }
 h2 {
   color: #fff;
 }
 .btn-default:hover {
 	background-color: #ccc;
-}
-.img-thumbnail {
-	background-color: #000;
-	border: 1px solid #000;
 }
 </style>
 	<h1>{{ page.title }}</h1>
