--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,21 @@
+<style>
+footer {
+  clear:both;
+  margin: 0;
+  padding: 50px 15px 0;
+}
+footer p {
+  margin:0
+}
+footer a {
+  color: #fff;
+  padding-left: 5px
+}
+footer a:hover {
+  color:#940b10;
+  text-decoration: underline;
+}
+</style>
 <footer>
    <p>&copy; 2018 Sutfin Art Industries  &middot;
 		 <a href="/contact/"> Contact </a> &middot;
