--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,28 +13,7 @@ layout: compress
         {{ content }}
 
     {% include footer.html %}
-    {% if site.env == "dev" %}
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    {% else %}
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    {% endif %}
-    {% if page.layout == 'gallery' %}
-    <!-- Gallery Scripts -->
-<script src="{{ "/js/blueimp-gallery.min.js" | relative_url }}"></script>
-<script>
-document.getElementById('links').onclick = function (event) {
-    event = event || window.event;
-    var target = event.target || event.srcElement,
-        link = target.src ? target.parentNode : target,
-        options = {index: link, event: event},
-        links = this.getElementsByTagName('a');
-    blueimp.Gallery(links, options);
-};
-</script>
-{% endif %}
+    {% include scripts.html %}
   </body>
 
 </html>
