--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,8 @@ layout: default
 	display: block;
 }
 div.marketing {
-	margin-bottom: 0px;
+	margin-bottom: 50px;
+	white-space: nowrap;
 }
 .marketing .col-lg-4 {
   text-align: center;
