--- a/_layouts/menu.html
+++ b/_layouts/menu.html
@@ -37,6 +37,10 @@ h1,
 .media-body a:hover {
 	text-decoration: none;
 }
+.media-body h4:hover {
+    color: #940b10;
+    text-decoration: none;
+}
 </style>
 <div class="container">
 	<h1>{{ page.title }}</h1>
