--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,84 +1,41 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <link rel="shortcut icon" href="{{"/favicon.ico" | relative_url }}">
-  <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-  {% if site.env == "dev" %}
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  {% else %}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  {% endif %}
-  <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed:400,500,600,700" rel="stylesheet">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-
-  {% if jekyll.environment == 'production' and site.google_analytics %}
-  {% include google-analytics.html %}
-  {% endif %}
-  <style>
-  body {
-    padding-bottom: 40px;
-    color: #999;
-    background-color: #222;
-    font-family: 'Cabin Condensed', sans-serif;
-  }
-  nav.navbar-inverse {
-    margin-bottom: 0px;
-  }
-  h1 {
-  	color:#999;
-  	margin-bottom: 20px;
-    font-weight: 700;
-    padding-left: 15px;
-  }
-  h2 {
-  	font-weight: 700;
-  }
-  .breadcrumb {
-  	margin: 0px;
-  	background-color: #080808;
-  }
-  .breadcrumb a {
-  	color: #fff;
-  }
-  a {
-  	color:#940b10;
-  }
-  a:hover,
-  .breadcrumb .active,
-  .breadcrumb > li + li:before,
-  footer a,
-  .media-body h4:hover {
-      color: #940b10;
-      text-decoration: none;
-  }
-  .dropdown-menu li a:hover {
-  	background-color: #ccc;
-  }
-div.marketing {
-  margin-bottom: 50px;
-  white-space: nowrap;
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+<title>{% if page.title %}{{ page.title | escape }} | {{ site.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+<link rel="shortcut icon" href="{{"/favicon.ico" | relative_url }}">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin+Condensed:400,500,600,700">
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+<style>
+body {
+  padding-bottom: 40px;
+  color: #999;
+  background-color: #222;
+  font-family: 'Cabin Condensed', sans-serif;
 }
-  footer {
-    clear:both;
-  	margin: 0;
-    padding: 50px 15px 0;
-  }
-  footer a:hover {
-  	color:#940b10;
-  	text-decoration: underline;
-  }
-  ol.breadcrumb li a {
-    text-transform: capitalize;
-  }
-footer p {
-  margin:0;
+nav.navbar-inverse {
+  margin-bottom: 0px;
 }
-  footer a {
-    color: #fff;
-    padding-left: 5px;
-  }
-  </style>
+.dropdown-menu li a:hover {
+	background-color: #ccc;
+}
+h1 {
+	color:#999;
+	margin-bottom: 20px;
+  font-weight: 700;
+  padding-left: 15px;
+}
+h2 {
+	font-weight: 700;
+}
+a {
+	color:#940b10;
+}
+a:hover {
+    color: #940b10;
+    text-decoration: none;
+}
+</style>
 </head>
