--- a/_layouts/menu-marketing.html
+++ b/_layouts/menu-marketing.html
@@ -7,11 +7,15 @@ layout: page
   padding: 30px 0 20px;
   background-color: #080808;
 }
-h2 {
+div.marketing h2 {
   color: #fff;
 }
 .btn-default:hover {
 	background-color: #ccc;
+}
+div.marketing {
+margin-bottom: 50px;
+white-space: nowrap;
 }
 </style>
 	<h1>{{ page.title }}</h1>
