--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,26 +1,5 @@
 ---
 layout: default
 ---
-
-  {% capture url_parts %} {{ page.url | remove: "/index.html" | replace:'/'," " }}{% endcapture %}
-{% capture num_parts %}{{ url_parts | number_of_words | minus: 1 }}{% endcapture %}
-{% assign previous="" %}
-<ol class="breadcrumb">
- {% if num_parts == "0" or num_parts == "-1" %}
-  <li><a href="/" title="Home">home</a></li>
- {% else %}
-  <li><a href="/" title="Home">home</a></li>
-
-  {% for unused in site.breadcrumb_list limit:num_parts %}
-   {% capture first_word %}{{ url_parts | truncatewords:1 | remove:"..."}}{% endcapture %}
-   {% capture previous %}{{ previous }}/{{ first_word }}{% endcapture %}
-   {% capture pretty_first_word %}{{ first_word | replace:'-'," " }}{% endcapture %}
-   <li><a href="{{previous}}" title="Go up {{ pretty_first_word }}">{{ pretty_first_word }}</a></li>
-
-   {% capture url_parts %}{{ url_parts | remove_first:first_word }}{% endcapture %}
-  {% endfor %}
- {% endif %}
- <li class="active">{{ page.title }}</li>
-</ol>
-
+{% include breadcrumbs.html %}
 {{ content }}
