--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,11 @@
+<style>
+nav.navbar-inverse {
+  margin-bottom: 0px;
+}
+.dropdown-menu li a:hover {
+  background-color: #ccc;
+}
+</style>
 <!-- Navbar -->
 <nav id="homeNavbar" class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
