update grand lake project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -87,14 +87,14 @@ a .featurette:hover h3 span.text-muted {
   <hr class="featurette-divider">
 	<a href="{{ "/projects/grand-lake-lodge-rocky-mtn-national-park-co/" | relative_url }}">
 	<div class="row featurette">
-    <div class="col-sm-6">
+    <div class="col-sm-5">
 				<h2 class="featurette-heading">Grand Lake Lodge -project</h2>
 				<p class="lead">Rock Mtn. National Park, CO</p>
       	<h3><span class="text-muted">Image Gallery</span></h3>
 			<p class="lead"></p>
     </div>
-    <div class="col-sm-6">
-      	<img class="featurette-image img-responsive pull-right" src="{{ "/images/projects/grand-lake-lodge-rocky-mtn-national-park-co/4.grand-lake-lodge-painting-osprey-mural.jpg" | relative_url }}" width="500" alt="Grand Lake Lodge painting Osprey mural" title="Grand Lake Lodge painting Osprey mural">
+    <div class="col-sm-7">
+      	<img class="featurette-image img-responsive pull-right" src="{{ "/img/grand-lake-lodge-recent-projects.jpg" | relative_url }}" width="500" alt="Grand Lake Lodge painting Osprey mural" title="Grand Lake Lodge painting Osprey mural">
     </div>
   </div></a>
   <hr class="featurette-divider">
