add description to recent project

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -91,7 +91,7 @@ a .featurette:hover h3 span.text-muted {
 				<h2 class="featurette-heading">Grand Lake Lodge -project</h2>
 				<p class="lead">Rock Mtn. National Park, CO</p>
       	<h3><span class="text-muted">Image Gallery</span></h3>
-			<p class="lead"></p>
+			<p class="lead">Grand Lakes Lodge is a nationally recognized historical building, located in the Rocky Mountain National Park, in Grand Lake, CO. Our work there included; painting five murals, the curation of a permanent display of historical photographs, design support, color consulting and overseeing the clean up, repair and installation of a large collection of taxidermy.</p>
     </div>
     <div class="col-sm-7">
       	<img class="featurette-image img-responsive pull-right" src="{{ "/img/grand-lake-lodge-recent-projects.jpg" | relative_url }}" width="500" alt="Grand Lake Lodge painting Osprey mural" title="Grand Lake Lodge painting Osprey mural">
