--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <style>
 nav.navbar-inverse {
   margin-bottom: 0px;
+  background-color: #181818;
 }
 .dropdown-menu li a:hover {
   background-color: #ccc;
