--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,11 +8,12 @@ layout: default
 .jumbotron {
 	padding: 20px 0;
 	margin:0;
-	background-color: #222;
+	background-color: rgba(0,0,0,0);
 }
 .jumbotron p {
 	text-align: center;
 	color:#999;
+	width:91%;
 }
 .jumbotron img {
 	margin: 0 auto;
@@ -33,7 +34,7 @@ div.marketing {
 	background-color: #ccc;
 }
 .featurette-divider {
-  border-color: #111;
+  border-color: #383838;
 }
 .featurette {
 	padding: 0px 15px;
@@ -53,7 +54,7 @@ a .featurette:hover h3 span.text-muted {
 <div class="jumbotron">
 <div class="container">
 	<img src="{{ "/img/logo-header-banner-large.png" | relative_url }}" width="100%" alt="Sutfin Art Industries Logo">
-	<p>Welcome. We specialize in the design, production and installation of visual art. Please have a look at our galleries to see the types of work we do and contact us if you have any questions or would like more information. Thank you.</p>
+	<p class="pull-right">Welcome. We specialize in the design, production and installation of visual art. Please have a look at our galleries to see the types of work we do and contact us if you have any questions or would like more information. Thank you.</p>
 </div>
 </div>
 <!-- Website categories and featurettes
@@ -89,7 +90,7 @@ a .featurette:hover h3 span.text-muted {
 	<div class="row featurette">
     <div class="col-sm-5">
 				<h2 class="featurette-heading">Grand Lake Lodge -project</h2>
-				<p class="lead">Rock Mtn. National Park, CO</p>
+				<p class="lead">Rocky Mtn. National Park, CO</p>
       	<h3><span class="text-muted">Image Gallery</span></h3>
 			<p class="lead">Grand Lakes Lodge is a nationally recognized historical building, located in the Rocky Mountain National Park, in Grand Lake, CO. Our work there included; painting five murals, the curation of a permanent display of historical photographs, design support, color consulting and overseeing the clean up, repair and installation of a large collection of taxidermy.</p>
     </div>
