add media query

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,12 @@ layout: default
 .jumbotron p {
 	text-align: center;
 	color:#999;
-	width:91%;
+	width:100%;
 }
+@media (min-width:455px) {
+	.jumbotron p {
+		width:91%;
+}}
 .jumbotron img {
 	margin: 0 auto;
 	display: block;
